--- a/data-analyst.html
+++ b/data-analyst.html
@@ -87,7 +87,7 @@
 <p><span class="badge badge-light">United States  Portland, OR</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://4re.referrals.selectminds.com/jobs/data-analyst-lexisnexis-risk-solutions-cardiff-27560'>Data Analyst - LexisNexis Risk Solutions  - Cardiff - RELX Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://4re.referrals.selectminds.com/jobs/data-analyst-lexisnexis-risk-solutions-cardiff-27560'>Data Analyst - LexisNexis Risk Solutions  - Cardiff - RELX Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -123,11 +123,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.greatinsurancejobs.com/job/6409357/rate-data-analyst/?TrackID=97736'>Rate Data Analyst job with Glatfelter Insurance Group | 6409357</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.greatinsurancejobs.com/job/6409357/rate-data-analyst/?TrackID=97736'>Rate Data Analyst job with Glatfelter Insurance Group | 6409357</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/bowmo/a412380a-c3d8-4cfd-be8b-6a9f33c6da48'>bowmo - Data Analyst (CRM)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bowmo/a412380a-c3d8-4cfd-be8b-6a9f33c6da48'>bowmo - Data Analyst (CRM)</a></h5> 
 <p><span class="badge badge-light">Brooklyn, NY</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -135,7 +135,7 @@
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=odssbfw2&__jvst=Employee+Referral&__jvsd=sSQvFhwE&__jvsc=Twitter&bid=no9bpMwo&jvi=odssbfw2,Job&jvk=Job'>Medidata Solutions Careers - Data Intelligence Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=odssbfw2&__jvst=Employee+Referral&__jvsd=sSQvFhwE&__jvsc=Twitter&bid=no9bpMwo&jvi=odssbfw2,Job&jvk=Job'>Medidata Solutions Careers - Data Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -151,7 +151,7 @@
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=o88pbfwA&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=nhv0oMwr'>Benefitfocus Careers - Data Analyst II</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=o88pbfwA&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=nhv0oMwr'>Benefitfocus Careers - Data Analyst II</a></h5> 
 <p><span class="badge badge-light">Charleston, South Carolina</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -171,7 +171,7 @@
 <p><span class="badge badge-light">NYC</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobware.net/Job/Data-Analyst-Real-World-Evidence-m-f-d.364219885.html?jw_chl_seg=YOURJOBINGERMANY&skin=zaehlpixel_only'>Data Analyst Real-World Evidence (m/f/d) | Fresenius Medical Care Deutschland GmbH | Job</a></h5> 
+<h5><a href='https://jobs.jobware.net/Job/Data-Analyst-Real-World-Evidence-m-f-d.364219885.html?jw_chl_seg=YOURJOBINGERMANY&skin=zaehlpixel_only'>Data Analyst Real-World Evidence (m/f/d) | Fresenius Medical Care Deutschland GmbH | Job</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -227,7 +227,7 @@
 <p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/ironcladts/430ed39b-425f-4d74-b326-6077344de6c7'>Ironclad Technology Services - Oracle Database Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ironcladts/430ed39b-425f-4d74-b326-6077344de6c7'>Ironclad Technology Services - Oracle Database Analyst</a></h5> 
 <p><span class="badge badge-light">San Diego, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -235,7 +235,7 @@
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://4re.referrals.selectminds.com/jobs/data-analyst-27501'>Data Analyst - RELX Careers</a></h5> 
+<h5><a href='https://4re.referrals.selectminds.com/jobs/data-analyst-27501'>Data Analyst - RELX Careers</a></h5> 
 <p><span class="badge badge-light">Oklahoma City United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -251,7 +251,7 @@
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://towerswatson.referrals.selectminds.com/jobs/data-analyst-engineer-12016'>Data Analyst/Engineer - Willis Towers Watson Careers</a></h5> 
+<h5><a href='https://towerswatson.referrals.selectminds.com/jobs/data-analyst-engineer-12016'>Data Analyst/Engineer - Willis Towers Watson Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -283,7 +283,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sumup/jobs/4497871002'>Job Application for Data CRM Analyst  at SumUp</a></h5> 
+<h5><a href='https://boards.greenhouse.io/sumup/jobs/4497871002'>Job Application for Data CRM Analyst  at SumUp</a></h5> 
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -295,7 +295,7 @@
 <p><span class="badge badge-light">New York, NY New York, NY</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://www.hbs.edu/recruiting/data/Pages/default.aspx?sf111482827=1'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.hbs.edu/recruiting/data/Pages/default.aspx?sf111482827=1'>
 	MBA Student Data &amp; Statistics - Recruiting - Harvard Business School
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -305,7 +305,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://idalab.softgarden.io/job/5122592/Data-and-Strategy-Analyst-at-HotSpot-Therapeutics-m-f-d-?jobDbPVId=14375302&amp;l=en'>Data and Strategy Analyst at HotSpot Therapeutics (m/f/d) at idalab GmbH | softgarden</a></h5> 
+<h5><a href='https://idalab.softgarden.io/job/5122592/Data-and-Strategy-Analyst-at-HotSpot-Therapeutics-m-f-d-?jobDbPVId=14375302&amp;l=en'>Data and Strategy Analyst at HotSpot Therapeutics (m/f/d) at idalab GmbH | softgarden</a></h5> 
 <p><span class="badge badge-light">Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -343,7 +343,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Visa/743999698364649-business-data-analyst-level-4'>Visa Business/Data Analyst - Level 4 | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Visa/743999698364649-business-data-analyst-level-4'>Visa Business/Data Analyst - Level 4 | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -359,7 +359,7 @@
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://westernun.referrals.selectminds.com/jobs/senior-data-analyst-21049'>Senior Data Analyst - Western Union Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://westernun.referrals.selectminds.com/jobs/senior-data-analyst-21049'>Senior Data Analyst - Western Union Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -371,7 +371,7 @@
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=o88pbfwA&__jvst=Employee&__jvsd=sFU2Kgw6&__jvsc=Twitter&bid=nNHSmMwZ'>Benefitfocus Careers - Data Analyst II</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=o88pbfwA&__jvst=Employee&__jvsd=sFU2Kgw6&__jvsc=Twitter&bid=nNHSmMwZ'>Benefitfocus Careers - Data Analyst II</a></h5> 
 <p><span class="badge badge-light">Charleston, South Carolina</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -421,7 +421,7 @@
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://cover.applytojob.com/apply/9F6YOyA9dD/Junior-Data-Analyst'>Junior Data Analyst - Cover - Career Page</a></h5> 
+<h5><a href='http://cover.applytojob.com/apply/9F6YOyA9dD/Junior-Data-Analyst'>Junior Data Analyst - Cover - Career Page</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -443,7 +443,7 @@
 <p><span class="badge badge-light">Paris Mountain View</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.indeed.com/job/data-analyst-088ca732a4c7cab8'>Data Analyst - Louisville, KY 40206 - Indeed.com</a></h5> 
+<h5><a href='https://www.indeed.com/job/data-analyst-088ca732a4c7cab8'>Data Analyst - Louisville, KY 40206 - Indeed.com</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
