--- a/data-architect.html
+++ b/data-architect.html
@@ -99,7 +99,7 @@
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jellysmack.recruitee.com/o/database-architect-hf-cdi-corse'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jellysmack.recruitee.com/o/database-architect-hf-cdi-corse'>
       Database Architect H/F - CDI (Corse) - Jellysmack
     </a></h5> 
 <p><span class="badge badge-light">France</span></p>
@@ -115,7 +115,7 @@
 <p><span class="badge badge-light">Orlando, FL, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BuzzClanLLC/743999698324956-senior-pl-sql-database-architect'>BuzzClan LLC Senior PL/ SQL Database Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BuzzClanLLC/743999698324956-senior-pl-sql-database-architect'>BuzzClan LLC Senior PL/ SQL Database Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -131,7 +131,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qc09Vfw0&k=Job&j=oAZxafw0&__jvst=Employee&__jvsd=sXQGmfwz&__jvsc=Twitter&bid=nMPCmMwQ'>Qlik Careers - Analytics Data Architect</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qc09Vfw0&k=Job&j=oAZxafw0&__jvst=Employee&__jvsd=sXQGmfwz&__jvsc=Twitter&bid=nMPCmMwQ'>Qlik Careers - Analytics Data Architect</a></h5> 
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -213,7 +213,7 @@ dig?...</p>
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/rivian.com/9534a527-465a-418a-a4ab-c9f5134f98c5'>Rivian Automotive - Battery Data Warehouse Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/rivian.com/9534a527-465a-418a-a4ab-c9f5134f98c5'>Rivian Automotive - Battery Data Warehouse Architect</a></h5> 
 <p><span class="badge badge-light">San Jose, CA</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -221,7 +221,7 @@ dig?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999697964726-senior-data-analytics-architect'>CapTech Consulting Senior Data & Analytics Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999697964726-senior-data-analytics-architect'>CapTech Consulting Senior Data & Analytics Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -282,11 +282,11 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Madison, WI</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Version1/743999697757305-azure-data-platform-solution-architect'>Version 1 Azure Data Platform Solution Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Version1/743999697757305-azure-data-platform-solution-architect'>Version 1 Azure Data Platform Solution Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CompuGainSolutions/743999697651138-business-intelligence-data-architect'>CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CompuGainSolutions/743999697651138-business-intelligence-data-architect'>CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -324,11 +324,11 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.vertex-solutions.com/job/data-and-cloud/enterprise-data-architect/j14668/'>Enterprise Data Architect Job | Vertex Solutions</a></h5> 
+<h5><a href='https://www.vertex-solutions.com/job/data-and-cloud/enterprise-data-architect/j14668/'>Enterprise Data Architect Job | Vertex Solutions</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jellysmack.recruitee.com/l/fr/o/database-architect-hf-cdi'>
+<h5><a href='https://jellysmack.recruitee.com/l/fr/o/database-architect-hf-cdi'>
       Database Architect H/F - CDI - Jellysmack
     </a></h5> 
 <p><span class="badge badge-light">Levallois-Perret, France</span></p>
@@ -356,7 +356,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/santander-consumer-usa/job/omambfwN'>Santander Consumer USA Careers - Data Architect</a></h5> 
+<h5><a href='https://jobs.jobvite.com/santander-consumer-usa/job/omambfwN'>Santander Consumer USA Careers - Data Architect</a></h5> 
 <p><span class="badge badge-light">Dallas, Texas</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -372,7 +372,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999697502592-vice-president-data-architecture'>Publicis Groupe Vice President, Data Architecture | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999697502592-vice-president-data-architecture'>Publicis Groupe Vice President, Data Architecture | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY 10014, USA</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -478,7 +478,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light">Albany, NY</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/trinitypartners/job/oqLjbfwp'>Trinity Careers - Senior Data Integration Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/trinitypartners/job/oqLjbfwp'>Trinity Careers - Senior Data Integration Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
